<resources>
    <string name="app_name">Secquraise</string>
    <string name="location">Location</string>
    <string name="capture_count">Capture Count</string>
    <string name="frequency_min">Frequency(min)</string>
    <string name="connectivity">Connectivity</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="manual_data_refresh">Manual Data Refresh</string>
</resources>