<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bannerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/dateTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bannerTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="210dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/screenshot"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeTv" />

    <LinearLayout
        android:id="@+id/captureCountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/CaptureCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_count"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/CaptureResultTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/Green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frequencyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/captureCountLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/FrequencyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_min"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/FrequencyResultTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/Green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectivityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/frequencyLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/ConnectivityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectivity"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ConnectivityResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAllCaps="true"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/batteryChargingLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/connectivityLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/BatteryCharging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_charging"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ResultBatteryCharging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text=""
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/batteryChargeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/batteryChargingLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/batteryChargeLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_charge"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/batteryChargeResultTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/Green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/batteryChargeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/locationLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/locationResultTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/Green" />

    </LinearLayout>


    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/manual_data_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>